[package]
name = "alrgateway"
version = "0.1.0"
authors = ["lazywalker <lazywalkerz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Uses `../hyper-reverse-proxy` when used locally, and uses version 0.5 from crates.io when published.
hyper-reverse-proxy = { path = "../hyper-reverse-proxy", version = "0.5" }
# hyper-reverse-proxy = { git = "https://github.com/lazywalker/hyper-reverse-proxy", branch = "master" }
hyper = "0.13"
url = "*"
tokio = { version = "0.2", features = ["full"] }

postgres = "*"
md5 = "*"
reqwest = { version = "0.10", features = ["json"] }
serde_json = "1"
lazy_static = "1.4"

log = "*"
log4rs = "0.10.0"
rust-ini = "0.15"

[dev-dependencies]
tokio-test = "*"